compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\\\\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..9): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..9): []
        Assign@(FileId(1), 0..9)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..9): String("\\")

