compiler/toc_hir_lowering/tests/snapshots/lowering__lower_complex_real_literal-16.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "var _ : int _ := 94393431193180696942841837085033647913224148539854e-358"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..72): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..72): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..72)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..72): Real(9.43934311931807e-309)

